--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx", ""],
+    "include": ["src/**/*.ts", "src/**/*.tsx", "./vite-env.d.ts"],
     "exclude": ["node_modules", "dist"]
 }
